<resources>
    <string name="app_name">K2 Taxi</string>
    <string name="app_name_taxi">Taxi</string>
    <string name="navigation_drawer_open"
        translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close"
        translatable="false">Close navigation drawer</string>
    <string name="permission_required_toast">Location permission required!</string>
    <string name="permission_rationale_location">This application needs to know your current location. Please grand location permissions.</string>
    <string name="location_permission_denied">App needs your location. Please relaunch and grand location permissions!</string>
    <string name="main_hint_phone_number">Phone number</string>
    <string name="main_hint_pickup_address">Pickup address</string>
    <string name="main_btn_text_order">Request ride</string>
    <string name="validate_incorrect_number">Incorrect phone number format</string>
    <string name="validate_number_must_start_with">Phone number must start with \"0\", \"+996\", or \"996\"</string>
    <string name="icon_content_description"
        translatable="false">tariff icon</string>
    <string name="card_price_int_som">from %d som</string>
    <string name="login_btn_msg_verify">Verify</string>
    <string name="menu_current_location">Current location</string>
    <string name="main_tariff_card_width_holder"
        translatable="false">from 999 som</string>
    <string name="channel_name">K2Taxi - the fastest taxi ever.</string>
    <string name="channel_description"
        translatable="false">Channel to show a ride process.</string>
    <string name="main_msg_ride_accepted">Accepted! We will call you soon.</string>
    <string name="main_btn_text_order_with_timer">Request ride (%s:%s)</string>
    <string name="main_warning_cannot_order_frequently">You have requested several times. Please try later.</string>
    <string name="splash_dialog_gps_needed_msg">This app needs GPS! Please turn it on.</string>
    <string name="error_timeout">Pure internet connection!</string>
    <string name="error_network_error">No Internet!</string>
    <string name="error_unknown_error">Unknown error!</string>
    <string name="content_desc_application_logo">Application logo</string>
    <string name="auth_et_hint_nickname">Nickname</string>
    <string name="auth_btn_msg_next">Next</string>
    <string name="login_btn_msg_register">Register</string>
    <string name="auth_msg_country_code"
        translatable="false">+996</string>
    <string name="auth_dialog_pre_explanation">We will be verifying the phone number:</string>
    <string name="auth_dialog_post_explanation">Is this OK, or would you like to edit the number?</string>
    <string name="auth_msg_edit">Edit</string>
    <string name="auth_msg_ok"
        translatable="false">OK</string>
    <string name="country_code_string"
        translatable="false">+996 %s</string>
    <string name="auth_msg_verification_code_sent_to">Verification code sent to:</string>
    <string name="auth_msg_enter_verification_code">Enter verification code</string>
    <string name="login_msg_error_very_short_name">Very short name!</string>
    <string name="auth_msg_city">City:</string>
    <string name="auth_msg_resend_verification_code_in_long_seconds">Resend verification code in %d sec.</string>
    <string name="auth_msg_resend">Resend</string>
    <string name="dialog_version_message">There is new version available. Get it now!</string>
    <string name="dialog_version_new_version">New version</string>
    <string name="profile_msg_city">City</string>
    <string name="profile_msg_nickname">Nickname</string>
    <string name="profile_btn_msg_edit">Edit</string>
    <string name="profile_btn_msg_save">Save</string>
    <string name="city_kyzylkiya">Kyzyl-Kiya</string>
    <string name="city_kadamjay">Kadamjay</string>
    <string name="profile_msg_saved">Saved!</string>
    <string name="profile_msg_title">Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="main_menu_title_user_name">Name</string>
    <string name="content_desc_account_avatar"
        translatable="false">content_desc_avatar_icon</string>
    <string name="dialog_logout_message">Do you really want to logout?</string>
    <string name="dialog_logout_title">Warning</string>
    <string name="content_desc_new_version">New version</string>
    <string name="main_msg_patience">Patience</string>
    <string name="error_invalid_sms_code">Invalid sms code!</string>
</resources>
