<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_pre_explanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dialog_horizontal_margin"
        android:layout_marginTop="@dimen/dialog_vertical_margin"
        android:layout_marginEnd="@dimen/dialog_horizontal_margin"
        android:text="@string/auth_dialog_pre_explanation"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dialog_horizontal_margin"
        android:layout_marginTop="@dimen/small_vertical_margin"
        android:layout_marginEnd="@dimen/dialog_horizontal_margin"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pre_explanation"
        tools:text="+996 999123123" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_post_explanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dialog_horizontal_margin"
        android:layout_marginTop="@dimen/small_vertical_margin"
        android:layout_marginEnd="@dimen/dialog_horizontal_margin"
        android:text="@string/auth_dialog_post_explanation"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tv_phone_number" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/dialog_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/dialog_vertical_margin"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="start"
        android:minWidth="64dp"
        android:paddingStart="@dimen/dialog_horizontal_margin"
        android:paddingTop="4dp"
        android:paddingEnd="@dimen/dialog_horizontal_margin"
        android:paddingBottom="4dp"
        android:text="@string/auth_msg_edit"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_post_explanation"
        app:textAllCaps="true"
        tools:ignore="UnusedAttribute" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/dialog_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/dialog_vertical_margin"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="end"
        android:minWidth="64dp"
        android:paddingStart="@dimen/dialog_horizontal_margin"
        android:paddingTop="4dp"
        android:paddingEnd="@dimen/dialog_horizontal_margin"
        android:paddingBottom="4dp"
        android:text="@string/auth_msg_ok"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_post_explanation"
        app:textAllCaps="true"
        tools:ignore="UnusedAttribute" />

</androidx.constraintlayout.widget.ConstraintLayout>