<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="@id/et_nickname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/et_nickname"
        app:srcCompat="@drawable/ic_person" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_nickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:enabled="false"
        android:hint="@string/profile_msg_nickname"
        android:inputType="textCapWords"
        android:maxLength="16"
        android:textColor="@color/country_code_tint_color"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_nickname"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_earth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintBottom_toBottomOf="@id/et_city"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/et_city"
        app:srcCompat="@drawable/ic_earth" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:enabled="false"
        android:hint="@string/profile_msg_city"
        android:inputType="textCapWords"
        android:maxLength="16"
        android:textColor="@color/country_code_tint_color"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_nickname"
        app:layout_constraintTop_toBottomOf="@id/et_nickname" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dialog_horizontal_margin"
        android:layout_marginTop="94dp"
        android:layout_marginEnd="@dimen/dialog_horizontal_margin"
        android:text="@string/profile_btn_msg_edit"
        app:layout_constraintTop_toBottomOf="@id/et_nickname" />

</androidx.constraintlayout.widget.ConstraintLayout>