<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/details_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="-4dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            app:layout_constraintBottom_toBottomOf="@id/et_country_code"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_country_code"
            app:srcCompat="@drawable/ic_phone" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_country_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/selector_edittext_background"
            android:enabled="false"
            android:text="@string/auth_msg_country_code"
            android:textColor="@color/country_code_tint_color"
            app:backgroundTint="@color/colorPrimary"
            app:layout_constraintStart_toEndOf="@id/iv_phone"
            app:layout_constraintTop_toTopOf="parent" />

        <io.jachoteam.taxiappclient.views.DetailInputEditText
            android:id="@+id/et_phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/selector_edittext_background"
            android:hint="@string/main_hint_phone_number"
            android:inputType="phone"
            android:lines="1"
            android:maxLength="9"
            app:layout_constraintBaseline_toBaselineOf="@id/et_country_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/et_country_code"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_pickup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            app:layout_constraintBottom_toBottomOf="@id/et_pickup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_pickup"
            app:srcCompat="@drawable/ic_earth" />

        <io.jachoteam.taxiappclient.views.DetailInputEditText
            android:id="@+id/et_pickup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="@dimen/small_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="24dp"
            android:background="@drawable/selector_edittext_background"
            android:hint="@string/main_hint_pickup_address"
            android:focusedByDefault="true"
            android:inputType="textCapSentences"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_pickup"
            app:layout_constraintTop_toBottomOf="@id/et_phone_number"
            tools:ignore="Autofill" />

        <FrameLayout
            android:id="@+id/fl_tariffs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_vertical_margin"
            app:layout_constraintTop_toBottomOf="@id/et_pickup">

            <io.jachoteam.taxiappclient.views.CardGroup
                android:id="@+id/card_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:paddingBottom="4dp"
                android:scrollbars="horizontal" />

        </FrameLayout>

        <ProgressBar
            android:id="@+id/pb_loading"
            style="@android:style/Widget.DeviceDefault.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_constraintTop_toBottomOf="@id/fl_tariffs" />

        <io.jachoteam.taxiappclient.views.RequestOrderButton
            android:id="@+id/btn_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/main_btn_text_order"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fl_tariffs"
            tools:ignore="UnusedAttribute" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>